# auto-invest

./: .gitignore  README.md  Taskfile.yml  config.yaml  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.ts  vite.config.ts
.codex/: config.example.toml
.github/workflows/: ci.yml  daily-update.yml  deploy-pages.yml  financial-analysis.yml  update-data.yml  update-leverage.yml
assets/: index-BNK_Yvdy.js  index-ed0iMCZl.css
backend/: config.py  data.py  data_sources.py  database.py  main.py  models.py
backend/routers/: analysis.py  market.py
backend/services/: analysis_service.py  leverage.py  market_service.py
backend/tests/: test_api.py
config/templates/: gitignore-frontend.txt
data/: real_estate_watch.yaml
docs/: ci-troubleshooting.md  development-progress.md  development.md  final-summary.md  financial-scraper-spec.md  frontend_data_contract.md  implementation-summary.md  troubleshooting.md
examples/: generate_market_plot.py  real_estate_yaml_to_csv.py
scripts/: README.md  create-404.js  fetch-actions-status.js  fetch_bottom_up.ts  fetch_valuation.py  fetch_valuation_free.py  fetch_valuation_pdr.py  financial-analyzer.js  financial-scraper-headless.js  financial-scraper.js  run-financial-analysis.js  scraper-config.js  scraper-utils.js  simple-scraper.js  test-ci.js  update-data.js  update_eps.py  update_leverage.py  update_leverage.ts  update_nasdaq_eps.ts  update_valuation.py  update_valuation.ts
src/: App.tsx  main.tsx
(+60 files in other folders)
