[project]
name = "auto-invest"
version = "0.1.0"
description = "Auto Invest Dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.1",
    "numpy>=1.26.3",
    "pandas>=2.2.0",
    "pandas-datareader>=0.10.0",
    "httpx>=0.27.2",
    "setuptools>=75.1.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.3.0"]
